@@ -35,6 +35,7 @@ Bugs fixed:
 - 2993137 CMSetProperty fails for CMPIInstance for EmbeddedObject
 - 2997928 Namespace incorrect in test_providers
 - 2997961 IndRetryTest.sh leaves IndicationSubscription modded
+- 3001879 Remove SLP sections from internalProvider
 
 Changes in 1.3.7
 ================
